--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,6 @@
   }
   
   body {
-    /*background: linear-gradient(
-      90deg,
-      rgba(48, 16, 255, 1) 0%,
-      rgba(100, 115, 255, 1) 100%
-    );*/
     background: url(./images/todobg.jpg) no-repeat fixed center;
     background-size: cover;
   }
@@ -21,16 +16,34 @@
     justify-content: flex-start;
     width: 520px;
     min-height: 600px;
-    background: rgba(14, 16, 32, 0.603);
+    box-shadow: 0 0 1rem 0 rgba(0,0,0,0.2);
+    background: url(./images/todobg.jpg) no-repeat fixed center;
     text-align: center;
     margin: 128px auto;
     border-radius: 10px;
     padding-bottom: 32px;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
   }
+
+  .todo-app::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: url(./images/todobg.jpg) no-repeat fixed center;
+    box-shadow: inset 0 0 2000px rgba(255,255,255,0.5);
+    filter: blur(10px);
+    margin: -20px;
+    z-index: -1;
+}
   
   h1 {
     margin: 32px 0;
-    color: #fff;
+    color: #333;
     font-size: 24px;
   }
   
@@ -50,11 +63,12 @@
     outline: none;
     width: 320px;
     background: transparent;
-    color: #fff;
+    color: #333;
   }
   
   .todo-input::placeholder {
-    color: #e2e2e2;
+    color: #333;
+    font-weight: bold;
   }
   
   .todo-button {
