--- a/src/App.css
+++ b/src/App.css
@@ -161,3 +161,13 @@
   .edit-icon {
     color: #fff;
   }
+
+  @media screen and (max-width: 768px) {
+    .todo-app {
+      width: 98%;
+      margin: 128px 1%;
+    }  
+    .todo-input {
+      width: 250px;
+    }  
+}
